--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BikeStation</string>
+    <string name="hint_latitud" />
+    <string name="hint_longitud" />
 </resources>
